[package]
name = "piston_rspy"
description = "Python bindings for piston_rs."
version = "0.3.2"
edition = "2021"
authors = ["Jonxslays"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Jonxslays/piston_rspy"
repository = "https://github.com/Jonxslays/piston_rspy"
documentation = "https://github.com/Jonxslays/piston_rspy"
keywords = ["piston-rs", "piston", "emkc", "code"]
categories = ["api-bindings", "asynchronous", "ffi"]

[lib]
name = "piston_rspy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15", features = ["extension-module"] }
pyo3-asyncio = { version = "0.15", features = ["tokio-runtime"] }
tokio = { version = "1" }
piston_rs = "0.4.3"
