[project]
name = "piston_rspy"
version = "0.3.2"
description = "Python bindings for piston_rs."
readme = "README.md"
author = "Jonxslays"
documentation = "https://jonxslays.github.io/piston_rspy/piston_rspy"
issue-tracker = "https://github.com/Jonxslays/piston_rspy/issues"
repository = "https://github.com/Jonxslays/piston_rspy"
url = "https://github.com/Jonxslays/piston_rspy"
requires-python = ">=3.7,<3.11"

[tool.pyright]
typeCheckingMode = "strict"
include = ["piston_rspy"]

[tool.black]
line-length = 99

[build-system]
# requires = ["maturin>=0.12,<0.13"]
# build-backend = "maturin"
requires = ["setuptools", "wheel", "setuptools-rust"]
