[project]
name = "piston_rspy"
version = "0.4.1"
description = "Python bindings for piston_rs."
requires-python = ">=3.7,<3.12"
readme = "README.md"

[tool.pyright]
typeCheckingMode = "strict"
include = ["piston_rspy"]

[tool.black]
line-length = 99

[build-system]
# requires = ["maturin>=0.12,<0.13"]
# build-backend = "maturin"
requires = ["setuptools", "wheel", "setuptools-rust"]
